# RRUpdater

./: Cargo.toml  Client.toml  LICENSE  README.md  Rocket.toml  Server.toml
.github/: compress.sh
.github/workflows/: build.yml  release.yml
client/: Cargo.toml
client/src/: config.rs  downloader.rs  lib.rs  main.rs  source.rs  utils.rs
client/tests/: download.rs  find.rs  new_find.rs
file_patcher_data/: files1.json
server/: Cargo.toml
server/src/: config.rs  lib.rs  main.rs  utils.rs
src/: helper.rs  lib.rs  main.rs  setting.rs
tests/: config.rs  hash.rs  server.toml
tests/client_data/: files.json
tests/data/: files.json  files1.json
