[package]
name = "rr_updater"
version = "0.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "0.2.36"
walkdir = "2.3.3"
serde_json = "1.0.104"
serde = { version = "1.0.183", features = ["derive"] }
tokio = { version = "*", features = ["fs"] }

[workspace]
members = ["server", "client"]
