[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
file_patcher = { path = "../" }
chrono = "0.4.26"
clap = { version = "4.3.21", features = ["derive"] }
fern = "0.6.2"
log = "0.4.19"
url = "2.4.0"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde_json = "1.0.104"
serde = "1.0.183"
bytes = "1.4.0"
